[package]
name = "cuet"
description = "Library to read & append WAVE file CUE chunks"
version = "0.0.5"
edition = "2021"
license = "CC0-1.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/cuet"
repository = "https://github.com/4LT/cuet"
categories = ["multimedia::audio"]
keywords = ["wave", "wav", "cue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
